# setup-go-cmake

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yaml  deploy.yaml  test.yaml
cmake/: SetupGo.cmake  SetupGoConfig.cmake
test/: CMakeLists.txt  setup_go.cmake
test/cmake/: SetupGoTest.cmake
